qt/quick/gen_qsgtexturematerial.h

class QSGMaterial;
class QSGMaterialShader;
class QSGMaterialType;
class QSGOpaqueTextureMaterial;
class QSGTexture;
class QSGTextureMaterial;
typedef struct QSGMaterial QSGMaterial;
typedef struct QSGMaterialShader QSGMaterialShader;
typedef struct QSGMaterialType QSGMaterialType;
typedef struct QSGOpaqueTextureMaterial QSGOpaqueTextureMaterial;
typedef struct QSGTexture QSGTexture;
typedef struct QSGTextureMaterial QSGTextureMaterial;
QSGOpaqueTextureMaterial* QSGOpaqueTextureMaterial_new();
QSGMaterialType* QSGOpaqueTextureMaterial_type(const QSGOpaqueTextureMaterial* self);
QSGMaterialShader* QSGOpaqueTextureMaterial_createShader(const QSGOpaqueTextureMaterial* self);
int QSGOpaqueTextureMaterial_compare(const QSGOpaqueTextureMaterial* self, QSGMaterial* other);
void QSGOpaqueTextureMaterial_setTexture(QSGOpaqueTextureMaterial* self, QSGTexture* texture);
QSGTexture* QSGOpaqueTextureMaterial_texture(const QSGOpaqueTextureMaterial* self);
void QSGOpaqueTextureMaterial_setMipmapFiltering(QSGOpaqueTextureMaterial* self, int filteringType);
int QSGOpaqueTextureMaterial_mipmapFiltering(const QSGOpaqueTextureMaterial* self);
void QSGOpaqueTextureMaterial_setFiltering(QSGOpaqueTextureMaterial* self, int filteringType);
int QSGOpaqueTextureMaterial_filtering(const QSGOpaqueTextureMaterial* self);
void QSGOpaqueTextureMaterial_setHorizontalWrapMode(QSGOpaqueTextureMaterial* self, int mode);
int QSGOpaqueTextureMaterial_horizontalWrapMode(const QSGOpaqueTextureMaterial* self);
void QSGOpaqueTextureMaterial_setVerticalWrapMode(QSGOpaqueTextureMaterial* self, int mode);
int QSGOpaqueTextureMaterial_verticalWrapMode(const QSGOpaqueTextureMaterial* self);
void QSGOpaqueTextureMaterial_setAnisotropyLevel(QSGOpaqueTextureMaterial* self, int level);
int QSGOpaqueTextureMaterial_anisotropyLevel(const QSGOpaqueTextureMaterial* self);
bool QSGOpaqueTextureMaterial_override_virtual_type(void* self, intptr_t slot);
QSGMaterialType* QSGOpaqueTextureMaterial_virtualbase_type(const void* self);
bool QSGOpaqueTextureMaterial_override_virtual_createShader(void* self, intptr_t slot);
QSGMaterialShader* QSGOpaqueTextureMaterial_virtualbase_createShader(const void* self);
bool QSGOpaqueTextureMaterial_override_virtual_compare(void* self, intptr_t slot);
int QSGOpaqueTextureMaterial_virtualbase_compare(const void* self, QSGMaterial* other);
void QSGOpaqueTextureMaterial_delete(QSGOpaqueTextureMaterial* self);
QSGMaterialType* QSGTextureMaterial_type(const QSGTextureMaterial* self);
QSGMaterialShader* QSGTextureMaterial_createShader(const QSGTextureMaterial* self);
void QSGTextureMaterial_delete(QSGTextureMaterial* self);